# magiclip

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: cli.rs  ffmpeg.rs  fzf.rs  main.rs  sub.rs  util.rs
src/snapshots/: magiclip__sub__test__parse.snap
test/: gem_glow.srt
test/expected/sub/: index_with_text.txt  parse.txt
