[package]
name = "magiclip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srtlib = "0.1.7"
anyhow = { version = "1.0.75", features = ["backtrace"] }
regex = "1.10.2"
itertools = "0.12.1"
clap = { version = "4.5.4", features = ["derive", "wrap_help", "unicode"] }
scopeguard = "1.2.0"
strum = { version = "0.26.2", features = ["derive"] }
