[package]
name = "magiclip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srtlib = "0.1.7"
anyhow = { version = "1.0.75", features = ["backtrace"] }
regex = "1.10.2"
itertools = "0.12.1"
clap = { version = "4.5.4", features = ["derive", "wrap_help", "unicode"] }
scopeguard = "1.2.0"
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.10.1"
sha2 = { version = "0.10.8", features = ["asm"] }
serde_derive = "1.0.203"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
generic-array = { version = "1.0.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap_derive = "4.5.8"
