[package]
name = "magiclip"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# domain specific - subtitles
srtlib = "0.1.7"

# essentials
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.12.1"
once_cell = "1.19.0"
regex = "1.10.2"

# serde
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
serde_with = "3.8.3"

# logging
log = "0.4.22"
env_logger = "0.11.3"

# cli
clap = { version = "4.5.4", features = ["derive", "wrap_help", "unicode"] }
clap_derive = "4.5.8"

# derive more
strum = { version = "0.26.2", features = ["derive"] }
derive-getters = "0.4.0"

# data structures
scopeguard = "1.2.0"

# filesystem
tempfile = "3.10.1"
walkdir = "2.5.0"

# parallelism
rayon = "1.10.0"

[dev-dependencies]
insta = "1.39.0"
